--- a/C2_Client/templates/index.html
+++ b/C2_Client/templates/index.html
@@ -26,9 +26,9 @@ Super Secret Client Endpoint
         font-family: monospace; /* Use a monospace font for terminal-like appearance */
         width: 100%; /* Fill the width of the parent container */
     }
-    .cursor {
+    /*.cursor {
         cursor: url("{{ url_for('static', filename='mouse.png') }}"), auto;
-    }
+    }*/
 </style>
 
 <div class="container cursor">
