--- a/C2_Client/templates/index.html
+++ b/C2_Client/templates/index.html
@@ -55,7 +55,7 @@ Super Secret Client Endpoint
 <script>
     // JavaScript function to handle form submission on Enter key press
     function submitFormOnEnter(event) {
-        if (event.keyCode === 13) {  // Check if the pressed key is Enter (keyCode 13)
+        if (event.keyCode === 13) {  // Check if the pressed key is Enter
             event.preventDefault();  // Prevent the default form submission
             document.getElementById('myForm').submit();  // Submit the form
         }
