flask moved to server

--- a/C2_Server/templates/index.html
+++ b/C2_Server/templates/index.html
@@ -12,6 +12,8 @@ Super Secret Client Endpoint
 </div>
 {% endif %}
 
+<form id="myForm" action="{{ url_for('client.index') }}" method="post" class="terminal-form">
+
 
 <style>
     /* Custom CSS for terminal-like appearance */
