--- a/C2_Server/templates/landing.html
+++ b/C2_Server/templates/landing.html
@@ -48,7 +48,7 @@
     <div class="container d-flex flex-column align-items-center">
 
       <h1>Coming Soon...</h1>
-      <h2>Welcome Baddies, we're working hard to improve our website and we'll ready to launch after</h2>
+      <h2>Welcome Baddies, we're working hard to improve our website and we'll ready to launch soon</h2>
       <div class="countdown d-flex justify-content-center" data-count="2042/12/29">
         <div>
           <h3>%d</h3>
@@ -77,10 +77,10 @@
       </div>
 
       <div class="social-links text-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://pbs.twimg.com/media/EbHkEztWsAA-LVU.jpg" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://pbs.twimg.com/media/EbHkEztWsAA-LVU.jpg" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://pbs.twimg.com/media/EbHkEztWsAA-LVU.jpg" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://pbs.twimg.com/media/EbHkEztWsAA-LVU.jpg" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -100,43 +100,47 @@
       </div>
     </section><!-- End About Us Section -->
 
-    <!-- ======= Contact Us Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container">
+<section id="contact" class="contact">
+  <div class="container">
 
-        <div class="section-title">
-          <h2>Contact Us</h2>
-        </div>
+    <div class="section-title">
+      <h2>Contact Us</h2>
+    </div>
 
-        <div class="row">
+    <div class="row">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>100 QuakerOats Avenue, New York, NY 535022</p>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>mother@northeastern.edu</p>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 8080 9999 69</p>
-              </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
-            </div>
-
+      <div class="col-lg-6">
+        <div class="info">
+          <div class="address">
+            <i class="bi bi-geo-alt"></i>
+            <h4>Location:</h4>
+            <p>3911 South Koval Lane, Las Vegas, NV 89109</p>
           </div>
 
+          <div class="email">
+            <i class="bi bi-envelope"></i>
+            <h4>Email:</h4>
+            <p>mother@northeastern.edu</p>
+          </div>
+
+          <div class="phone">
+            <i class="bi bi-phone"></i>
+            <h4>Call:</h4>
+            <p>+1 8080 9999 69</p>
+          </div>
+        </div>
       </div>
-    </section><!-- End Contact Us Section -->
+
+      <div class="col-lg-6">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3224.6591681760516!2d-115.166080!3d36.11923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c8c5774e561a65%3A0x39b1559b6d1d21dd!2s3911%20S%20Koval%20Ln%2C%20Las%20Vegas%2C%20NV%2089109%2C%20USA!5e0!3m2!1sen!2sbg!4v1649828312697!5m2!1sen!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+
+    </div>
+
+  </div>
+</section><!-- End Contact Us Section -->
+
+    
 
   </main><!-- End #main -->
 
@@ -151,7 +155,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/maundy-free-coming-soon-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by me!</a>
       </div>
     </div>
   </footer><!-- End #footer -->
