--- a/C2_Server/templates/index.html
+++ b/C2_Server/templates/index.html
@@ -12,25 +12,27 @@ Super Secret Client Endpoint
 </div>
 {% endif %}
 
+<h1 class="pt-5 pb-2">You made it, Welcome to our homebase!</h1>
+
 <form id="myForm" action="{{ url_for('client.index') }}" method="post" class="terminal-form">
 
 
 <style>
     /* Custom CSS for terminal-like appearance */
     .terminal-form {
-        background-color: #f8e7e7; /*pink!*/
-        color: #724060;
-        border: 7px solid #724060; /* purple border */
-        border-radius: 25px;
+        background-color: black;
+        color: white;
+        border: 2px solid #33cc33; /* Green border */
+        border-radius: 5px;
         padding: 10px;
         margin-top: 20px;
         font-family: monospace; /* Use a monospace font for terminal-like appearance */
         height: 300px; /* Adjust the height to your preference */
-        overflow-y: auto; /* Enable vertical scrollbar if content exceeds the height */
+        overflow-y: auto
     }
     .terminal-input {
         background-color: transparent; /* Transparent background */
-        color: #724060;
+        color: white;
         border: none;
         outline: none;
         font-family: monospace; /* Use a monospace font for terminal-like appearance */
@@ -41,18 +43,22 @@ Super Secret Client Endpoint
 <div class="container cursor">
     <div class="row">
         <div class="col-md-10 col-lg-8 mx-lg-auto mx-md-auto">
-            <h1 class="pt-5 pb-2">Welcome to our homebase!</h1>
             <form id="myForm" action="/" method="post" class="terminal-form">
                 {{ form.csrf_token }}
                 <div class="border p-4 rounded">
                     <input type="text" name="cmd" class="terminal-input" autofocus placeholder="=> " required>
                 </div>
             </form>
+        </div>
+    </div>
+    <div class="row mt-3"> <!-- Add a new row for the "Previous command" section -->
+        <div class="col-md-10 col-lg-8 mx-lg-auto mx-md-auto">
             <h3>Previous command:</h3>
-            <p class="pt-5"><strong>{{ cmd }}</strong></p>
+            <p class="pt-2"><strong>{{ cmd }}</strong></p>
         </div>
     </div>
 </div>
+
 
 <script>
     // JavaScript function to handle form submission on Enter key press
