--- a/C2_Server/templates/index.html
+++ b/C2_Server/templates/index.html
@@ -1,10 +1,25 @@
-<!-- index.html -->
 {% extends 'base.html' %}
 {% block title %}
 Super Secret Client Endpoint
 {% endblock %}
 
 {% block content %}
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <title>Data Map</title>
+
+    <!-- below are imports for the map -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+    <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
+</head>
 
 {% if error_message %}
 <div class="alert alert-danger" role="alert">
@@ -14,8 +29,32 @@ Super Secret Client Endpoint
 
 <h1 class="pt-5 pb-2">You made it, Welcome to our homebase!</h1>
 
-<form id="myForm" action="{{ url_for('client.index') }}" method="post" class="terminal-form">
+<div class="container">
+    <div class="row">
+        <div id="map"></div>
+    </div>
+</div>
 
+<script src="static/js/script.js"></script>
+
+<!-- Green/black box column -->
+<div class="col-md-6">
+    <div class="container cursor">
+        <form id="myForm" action="{{ url_for('client.index') }}" method="post" class="terminal-form">
+            {{ form.csrf_token }}
+            <div class="border p-4 rounded">
+                <input type="text" name="cmd" class="terminal-input" autofocus placeholder="=> " required>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+            </div>
+        </form>
+        <div class="row mt-3"> <!-- Add a new row for the "Previous command" section -->
+            <div class="col-md-10 col-lg-8 mx-lg-auto mx-md-auto">
+                <h3>Previous command:</h3>
+                <p class="pt-2"><strong>{{ cmd }}</strong></p>
+            </div>
+        </div>
+    </div>
+</div>
 
 <style>
     /* Custom CSS for terminal-like appearance */
@@ -28,7 +67,7 @@ Super Secret Client Endpoint
         margin-top: 20px;
         font-family: monospace; /* Use a monospace font for terminal-like appearance */
         height: 300px; /* Adjust the height to your preference */
-        overflow-y: auto
+        overflow-y: auto;
     }
     .terminal-input {
         background-color: transparent; /* Transparent background */
@@ -39,26 +78,6 @@ Super Secret Client Endpoint
         width: 100%; /* Fill the width of the parent container */
     }
 </style>
-
-<div class="container cursor">
-    <div class="row">
-        <div class="col-md-10 col-lg-8 mx-lg-auto mx-md-auto">
-            <form id="myForm" action="/" method="post" class="terminal-form">
-                {{ form.csrf_token }}
-                <div class="border p-4 rounded">
-                    <input type="text" name="cmd" class="terminal-input" autofocus placeholder="=> " required>
-                </div>
-            </form>
-        </div>
-    </div>
-    <div class="row mt-3"> <!-- Add a new row for the "Previous command" section -->
-        <div class="col-md-10 col-lg-8 mx-lg-auto mx-md-auto">
-            <h3>Previous command:</h3>
-            <p class="pt-2"><strong>{{ cmd }}</strong></p>
-        </div>
-    </div>
-</div>
-
 
 <script>
     // JavaScript function to handle form submission on Enter key press
@@ -74,4 +93,5 @@ Super Secret Client Endpoint
         document.querySelector('.terminal-input').addEventListener('keydown', submitFormOnEnter);
     });
 </script>
+
 {% endblock %}
