--- a/C2_Server/templates/landing.html
+++ b/C2_Server/templates/landing.html
@@ -92,6 +92,7 @@
               {{ form.email.label }}
               {{ form.email(class="form-control") }}
           </div>
+	  <input type="hidden" name="csrf_token" value = "{{ csrf_token() }}" />
           <button type="submit" class="btn btn-primary">Submit</button>
       </form>      
       </div>
@@ -174,7 +175,6 @@
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/maundy-free-coming-soon-bootstrap-theme/ -->
         Designed by me!</a>
       </div>
     </div>
@@ -188,8 +188,6 @@
 
   <!-- Template Main JS File -->
   <script src="static/js/main.js"></script>
-
-</body>
 
 
 </body>
