--- a/cvnt/cvnt/templates/index.html
+++ b/cvnt/cvnt/templates/index.html
@@ -5,6 +5,22 @@ Super Secret Client Endpoint
 
 {% block content %}
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <title>Data Map</title>
+
+    <!-- below are imports for the map -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+    <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
+</head>
+
 {% if error_message %}
 <div class="alert alert-danger" role="alert">
     {{ error_message }} <!-- Corrected here -->
@@ -15,26 +31,26 @@ Super Secret Client Endpoint
 
 <div class="container">
     <div class="row">
-        <!-- Map column -->
-        <div class="col-md-6">
-	     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.638527085908!2d-71.0875!3d42.3367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e3778d9b3b9b23%3A0x32b7439e8515d1cb!2sBoston%2C%20MA%2C%20USA!5e0!3m2!1sen!2sbg!4v1649871888598!5m2!1sen!2sbg" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-        <!-- Green/black box column -->
-        <div class="col-md-6">
-            <div class="container cursor">
-                <form id="myForm" action="{{ url_for('client.index') }}" method="post" class="terminal-form">
-                    {{ form.csrf_token }}
-                    <div class="border p-4 rounded">
-                        <input type="text" name="cmd" class="terminal-input" autofocus placeholder="=> " required>
-                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                    </div>
-                </form>
-                <div class="row mt-3"> <!-- Add a new row for the "Previous command" section -->
-                    <div class="col-md-10 col-lg-8 mx-lg-auto mx-md-auto">
-                        <h3>Previous command:</h3>
-                        <p class="pt-2"><strong>{{ cmd }}</strong></p>
-                    </div>
-                </div>
+        <div id="map"></div>
+    </div>
+</div>
+
+<script src="static/js/script.js"></script>
+
+<!-- Green/black box column -->
+<div class="col-md-6">
+    <div class="container cursor">
+        <form id="myForm" action="{{ url_for('client.index') }}" method="post" class="terminal-form">
+            {{ form.csrf_token }}
+            <div class="border p-4 rounded">
+                <input type="text" name="cmd" class="terminal-input" autofocus placeholder="=> " required>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+            </div>
+        </form>
+        <div class="row mt-3"> <!-- Add a new row for the "Previous command" section -->
+            <div class="col-md-10 col-lg-8 mx-lg-auto mx-md-auto">
+                <h3>Previous command:</h3>
+                <p class="pt-2"><strong>{{ cmd }}</strong></p>
             </div>
         </div>
     </div>
