--- a/cvnt/cvnt/templates/index.html
+++ b/cvnt/cvnt/templates/index.html
@@ -64,12 +64,8 @@
               <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             </div>
           </form>
-          <div class="row mt-3"> <!-- Add a new row for the "Previous command" section -->
-            <div class="col-md-10 col-lg-8 mx-lg-auto mx-md-auto">
-              <h3>Previous command:</h3>
-              <p class="pt-2"><strong>{{ cmd }}</strong></p>
-            </div>
-          </div>
+          <!-- Add a new div to display the response message -->
+          <div id="response-container" class="mt-3"></div>
         </div>
       </div>
     </div>
@@ -142,6 +138,12 @@
         event.preventDefault();  // Prevent the default form submission
         document.getElementById('myForm').submit();  // Submit the form
       }
+    }
+
+    // Update the response container with the received response
+    function updateResponse(response) {
+      var responseContainer = document.getElementById('response-container');
+      responseContainer.innerHTML = '<strong>Response:</strong> ' + response;
     }
 
     // Attach keydown event listener to the form input field(s)
