--- a/cvnt/cvnt/templates/explorer.html
+++ b/cvnt/cvnt/templates/explorer.html
@@ -50,6 +50,9 @@
                         <a class="nav-link active" href="../client">Terminal and Map</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" href="../terminal">Terminal</a>
+                      </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="../explorer">File explorer</a>
                     </li>
                 </ul>
