dir works for a given implant when has no arguments. going to test on windows now before even attempting with arguments

--- a/cvnt/cvnt/templates/terminal.html
+++ b/cvnt/cvnt/templates/terminal.html
@@ -93,8 +93,12 @@
         </select>
       </div>
       <div class="col-md-3">
-      <h3>Response:</h3>
-        <p class="pt-5"><strong>{{ response }}</strong></p>
+        <h3>Response:</h3>
+        <div class="pt-5">
+          {% for item in response %}
+            <p><strong>{{ item }}</strong></p>
+          {% endfor %}
+        </div>        
       </div>
     </div>
   </div>
